<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dailogAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/Add_preassure"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Curr_preassure_syst"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/blod_preassure_syst"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Curr_preassure_diast"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/blod_preassure_diast"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:textStyle="bold" />
</LinearLayout>




    <Button
        android:id="@+id/btnAddPreassure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shapeblood"
        android:text="Add"
        android:textColor="@android:color/white"
        android:onClick="onSavePreferences"/>
</LinearLayout>